re PR target/47955 (gcc.dg/stack-usage-1.c fails on m68k-linux)

PR target/47955
* gcc/config/m68k/m68k.c (m68k_expand_prologue): Set
current_function_static_stack_size.

From-SVN: r173260